--- a/sportsio/templates/user_side/order_view.html
+++ b/sportsio/templates/user_side/order_view.html
@@ -217,7 +217,7 @@
                                 <th class="uren-product-thumbnail">images</th>
                                 <th class="cart-product-name">Product</th>
                                 <th class="uren-product-price li-product-price">Unit Price</th>
-                                <th class="uren-product-quantity">Quantity</th>
+                                <th class="uren-product-quantity">Sub Total</th>
                                     
                                 
                             </tr>
