--- a/sportsio/templates/admin_side/base.html
+++ b/sportsio/templates/admin_side/base.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
 {% load static %}
+
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -55,7 +56,7 @@
             <li class="sidebar-item">
               <a class="sidebar-link" href="{% url 'product_management' %}" aria-expanded="false">
                 <span>
-                  <i class="ti ti-alert-circle"></i>
+                  <i class="ti ti-package"></i>
                 </span>
                 <span class="hide-menu">Product Management</span>
               </a>
@@ -71,7 +72,7 @@
             <li class="sidebar-item">
               <a class="sidebar-link" href="{% url 'banner_management'%}" aria-expanded="false">
                 <span>
-                  <i class="ti ti-file-description"></i>
+                  <i class="ti ti-layout-media-center-alt"></i>
                 </span>
                 <span class="hide-menu">Banners Management</span>
               </a>
@@ -79,7 +80,7 @@
             <li class="sidebar-item">
               <a class="sidebar-link" href="{% url 'inventory' %}" aria-expanded="false">
                 <span>
-                  <i class="ti ti-typography"></i>
+                  <i class="ti ti-dropbox "></i>
                 </span>
                 <span class="hide-menu">Inventory</span>
               </a>
@@ -87,7 +88,7 @@
             <li class="sidebar-item">
               <a class="sidebar-link" href="{% url 'order_management' %}" aria-expanded="false">
                 <span>
-                  <i class="ti ti-typography"></i>
+                  <i class="ti ti-shopping-cart-full"></i>
                 </span>
                 <span class="hide-menu">Order Management</span>
               </a>
@@ -95,7 +96,7 @@
             <li class="sidebar-item">
               <a class="sidebar-link" href="{% url 'coupon_management' %}" aria-expanded="false">
                 <span>
-                  <i class="ti ti-typography"></i>
+                  <i class="ti "></i>
                 </span>
                 <span class="hide-menu">Coupon Management</span>
               </a>
@@ -108,46 +109,12 @@
               <a href="{% url 'admin_logout' %}" class="btn btn-outline-danger btn-sm mx-3 mt-2 d-block">Logout</a>
 
             </li>
-            <li class="sidebar-item">
-              <a class="sidebar-link" href="./authentication-register.html" aria-expanded="false">
-                <span>
-                  <i class="ti ti-user-plus"></i>
-                </span>
-                <span class="hide-menu">Register</span>
-              </a>
-            </li>
-            <li class="nav-small-cap">
-              <i class="ti ti-dots nav-small-cap-icon fs-4"></i>
-              <span class="hide-menu">EXTRA</span>
-            </li>
-            <li class="sidebar-item">
-              <a class="sidebar-link" href="./icon-tabler.html" aria-expanded="false">
-                <span>
-                  <i class="ti ti-mood-happy"></i>
-                </span>
-                <span class="hide-menu">Icons</span>
-              </a>
-            </li>
-            <li class="sidebar-item">
-              <a class="sidebar-link" href="./sample-page.html" aria-expanded="false">
-                <span>
-                  <i class="ti ti-aperture"></i>
-                </span>
-                <span class="hide-menu">Sample Page</span>
-              </a>
-            </li>
+            
+
+
+
           </ul>
-          <div class="unlimited-access hide-menu bg-light-primary position-relative mb-7 mt-5 rounded">
-            <div class="d-flex">
-              <div class="unlimited-access-title me-3">
-                <h6 class="fw-semibold fs-4 mb-6 text-dark w-85">Upgrade to pro</h6>
-                <a href="https://adminmart.com/product/modernize-bootstrap-5-admin-template/" target="_blank" class="btn btn-primary fs-2 fw-semibold lh-sm">Buy Pro</a>
-              </div>
-              <div class="unlimited-access-img">
-                <img src="{% static 'assets/admin_side/images/backgrounds/rocket.png' %}" alt="" class="img-fluid">
-              </div>
-            </div>
-          </div>
+
         </nav>
         <!-- End Sidebar navigation -->
       </div>
